  13 Jan 2016;  <chymera@gentoo.org> +files/btsync.conf, +files/init.d/btsync,
  +files/systemd/btsync.service, -files/btsync.confd, -files/btsync.initd:
  net-p2p/bittorrent-sync: added service/config files from pigfoot to correct
  ebuild

*bittorrent-sync-1.4.110 (13 Jan 2016)

  13 Jan 2016;  <chymera@gentoo.org> +bittorrent-sync-1.4.110.ebuild,
  -bittorrent-sync-1.1.82.ebuild, -bittorrent-sync-1.3.105.ebuild,
  -bittorrent-sync-1.3.94-r1.ebuild:
  net-p2p/bittorrent-sync: added new ebuild by pigfoot