@@ -1,2 +1,5 @@
+DIST BitTorrent-Sync_arm.tar.gz 5413181 SHA256 80c018ba8672325deb537f77d48b383722ffa28d6ee10434d81915a79b066404 SHA512 ab6a368325ed7f53fdd66c421651d794f24a9f91614b0091d72933c35e044b4d5bb9adcb2bab86b53bd1177db7beed61416f0e284840c6d132838f1fd0f6e99f WHIRLPOOL acbf57a566e670c10e29f541a3425ab6360f90ba9f2688d20fccf9be7ad27350c76cee8ca80e0c60293a9010eea8ad51e55e230fd5b40386b4088b540b61eb9c
+DIST BitTorrent-Sync_i386.tar.gz 5199007 SHA256 2cc4079f9492be044bd6dc40052349cfabac38a14d9655d0396f701d478813ba SHA512 3227d0d4c96265e6b903d1692e0b5e1ea4c4de8bd539d9850470327329e614f973f19d00fb8956071660e313a41098b269f8639bb0dc7a22868a8284580083ad WHIRLPOOL 0015e301ea7ec29e321589a98ea7773ad538543d3dd9629c7c9e31d96e25943b4431ed6ae6f9f6ce4ae8e0e999e9289701b880e52dc4eebd298b6b450286bcd7
+DIST BitTorrent-Sync_x64.tar.gz 5535248 SHA256 eb09aacca9b28125b67a8f48f734d6c5453ed2fe8395a940bbabf5db3c88b0d1 SHA512 ca344bee25f66809d3bd887554525bffed220e887958c1b61cccf344e4171f6df93f4d22af16a0cac7ef4fdf5118bc1201bf57e69ff6fc33a31549cf27c4fe07 WHIRLPOOL e84878b8a2796e04c3370677e89cc43b23e6308217a6422f5c215b3edb939aee70a91513853938ec4d60e78a5440b6a27db558488da9dbaa9d3b82e51e2dd696
 DIST btsync_i386-1.4.110.tar.gz 3986220 SHA256 5d307dd9a39e2f6688976eb9e2ba8a67dad98ae7f3df59c6550c45d3bae25831 SHA512 c08990d0707376f7eb117170ea72c0de162eb0c7aacf98b752fc915c92b8f7774ee3d5a51e3857ad1ddcc18427b20c7fdb1720de057705c2812c7b030162ae09 WHIRLPOOL 95c9bcc3a8b4b23c1fc86d6512ab32a86ca13c4a561891894a6186cd766a364f449df8bcb7d419c5e1750086e9d6b41180ab76ee3055cd42416c2d0f607d1ecc
 DIST btsync_x64-1.4.110.tar.gz 4138116 SHA256 edba53cf27a2e64646d5216938fc3a2292e7b1201c864387703ffb7d3b362ead SHA512 c3893f6ee70ebdb0ce61559c17ef6af269ca15cd3ccb79768cfbd0b5cd42bfbc5b41cf4506ddd36ff7bbb62c1307b04b621987c4cbfc7c6ab91b8ca465327129 WHIRLPOOL f40628d97248fd692bfced71f08c687a90ef03018697aa4acbd23a5e1cca7d8cafebb475c0edd62ced89325084e380d241321d0e538008bc411028c2b9f018f0
