@@ -1,3 +1,8 @@
+*bittorrent-sync-9999 (21 Jan 2016)
+
+  21 Jan 2016;  <chymera@gentoo.org> +bittorrent-sync-9999.ebuild:
+  net-p2p/bittorrent-sync: trying out live version (currently 2.2.7)
+
   13 Jan 2016;  <chymera@gentoo.org> +files/btsync.conf, +files/init.d/btsync,
   +files/systemd/btsync.service, -files/btsync.confd, -files/btsync.initd:
   net-p2p/bittorrent-sync: added service/config files from pigfoot to correct
